istio/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: genesio
  labels:
    app: genesion
    service: genesio
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: genesio
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: genesio-v1
  labels:
    app: genesio
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: genesio
        version: v1
    spec:
      containers:
      - name: genesio
        image: fsanti68/java-istio-microservice-istio:1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: genesio-v2
  labels:
    app: genesio
    version: v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: genesio
        version: v2
    spec:
      containers:
      - name: genesio
        image: fsanti68/java-istio-microservice-istio:2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
