istio/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: genesio
spec:
  host: genesio
  subsets:
  - name: v1
    labels:
      version: v1
