istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: genesio-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: genesio
spec:
  hosts:
  - "*"
  gateways:
  - genesio-gateway
  http:
  - match:
    - uri:
        prefix: /genesio
    route:
    - destination:
        host: genesio
        port:
          number: 8080
