istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: genesio-vs
spec:
  hosts:
    - "*"
  gateways:
    - genesio-gateway
  http:
  - route:
    - destination:
        host: genesio
        subset: v1
        port:
          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: genesio
spec:
  host: genesio
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      app: genesio
      version: v1
